hphp/hack/test/typecheck/async_hint1.php.exp
File "async_hint1.php", line 4, characters 30-32:
Was expecting an `Awaitable` return type hint (Typing[4174])
