hphp/hack/test/typecheck/async_hint1.php
<?hh // partial

// Testing function
async function wrong_hint(): int {
  throw new Exception();
}
